# hadalyapi

./: .env  .gitignore  Dockerfile  config.py  engine_test.py  hadaly_api.pem  main.py  market_data.py  plot.json  pyproject.toml  railway.json
engine/: Stock.py  engine.py  indicators.py  strategy.py  test.py
models/: Historic_request.py  Indicator_request.py  Report_request.py  Request.py  Strategy_request.py  indicator.py  user.py
reports/: HTML.py  generate_content.py  generate_report.py  report.css
reports/graphs/: generateGraphs.py
reports/sections/: Events.py  General_description.py  Performance.py  Risk.py
reports/sections/General_description/: General_description.py  important_stocks.py
reports/sections/Risk/: Risk.py  get_beta_data.py
routes/: cached.py  engine.py  gspc.py  historic.py  indicators.py  patterns.py  report.py  root.py  user.py  yperformance.py
util/: ask_gpt.py  calculateIndicators.py  calculate_indicator.py  calculate_return.py  events.py  get_value_at_time.py  indicators_params.csv  last_open_day.py  market_data.py  parameters_name.csv  previous_date.py  sp500_performance.py
