[tool.poetry]
name = "main"
version = "0.1.0"
description = "This example starts up a FastAPI server"
authors = ["DeviousLab <deviouslab@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
anyio = "^3.6.2"
click = "^8.1.3"
fastapi = "^0.89.1"
fastapi-limiter = "^0.1.5"
fastapi-cache2 = "^0.2.1"
h11 = "^0.14.0"
httptools = "^0.5.0"
idna = "^3.4"
pydantic = "^1.10.4"
python-dotenv = "^1.0.0"
PyYAML = "^6.0"
sniffio = "^1.3.0"
starlette = "^0.22.0"
uvicorn = "^0.20.0"
uvloop = "^0.17.0"
watchfiles = "^0.18.1"
websockets = "^10.4"
yahoo_fin = "^0.8.9"
pandas = "^1.4.1"
datetime = "^4.3"
numpy = "^1.23.1"
yfinance = "^0.2.18"
ccxt = "^3.0.83"
python-binance = "^1.0"
cryptocompare="^0.7"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
dev = "main:dev"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
